// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`barStack > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1s3oplf2"
    >
      <div
        class="styles__1s3oplf0"
        style="--_1hxmh00a: 10.638297872340425%; --_1hxmh000: #f9f9fa1A; --_1hxmh001: #e9eaeb33; --_1hxmh002: #8c40efD9; --_1hxmh003: #8c40ef4D; --_1hxmh004: #f9f9fa33; --_1hxmh005: #f9f9fa40; --_1hxmh006: #b824f940; --_1hxmh007: #b824f9BF; --_1hxmh008: #8c40ef12;"
      >
        <div
          class="styles__1s3oplf1"
        >
          Hello
        </div>
      </div>
      <div
        class="styles__1s3oplf0"
        style="--_1hxmh00a: 22.340425531914892%; --_1hxmh000: #f9f9fa1A; --_1hxmh001: #e9eaeb33; --_1hxmh002: #8c40efD9; --_1hxmh003: #8c40ef4D; --_1hxmh004: #f9f9fa33; --_1hxmh005: #f9f9fa40; --_1hxmh006: #b824f940; --_1hxmh007: #b824f9BF; --_1hxmh008: #8c40ef12;"
      >
        <div
          class="styles__1s3oplf1"
        />
      </div>
      <div
        class="styles__1s3oplf0"
        style="--_1hxmh00a: 22.340425531914892%; --_1hxmh000: #f9f9fa1A; --_1hxmh001: #e9eaeb33; --_1hxmh002: #8c40efD9; --_1hxmh003: #8c40ef4D; --_1hxmh004: #f9f9fa33; --_1hxmh005: #f9f9fa40; --_1hxmh006: #b824f940; --_1hxmh007: #b824f9BF; --_1hxmh008: #8c40ef12;"
      >
        <div
          class="styles__1s3oplf1"
        >
          Encore
        </div>
      </div>
      <div
        class="styles__1s3oplf0"
        style="--_1hxmh00a: 22.340425531914892%; --_1hxmh000: #f9f9fa1A; --_1hxmh001: #e9eaeb33; --_1hxmh002: #8c40efD9; --_1hxmh003: #8c40ef4D; --_1hxmh004: #f9f9fa33; --_1hxmh005: #f9f9fa40; --_1hxmh006: #b824f940; --_1hxmh007: #b824f9BF; --_1hxmh008: #8c40ef12;"
      >
        <div
          class="styles__1s3oplf1"
        >
          Next
        </div>
      </div>
      <div
        class="styles__1s3oplf0"
        style="--_1hxmh00a: 22.340425531914892%; --_1hxmh000: #f9f9fa1A; --_1hxmh001: #e9eaeb33; --_1hxmh002: #8c40efD9; --_1hxmh003: #8c40ef4D; --_1hxmh004: #f9f9fa33; --_1hxmh005: #f9f9fa40; --_1hxmh006: #b824f940; --_1hxmh007: #b824f9BF; --_1hxmh008: #8c40ef12;"
      >
        <div
          class="styles__1s3oplf1"
        >
          Bye bye
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`barStack > should render correctly with event handlers 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1s3oplf2"
    >
      <div
        class="styles__1s3oplf0"
        style="--_1hxmh00a: 100%; --_1hxmh000: #f9f9fa1A; --_1hxmh001: #e9eaeb33; --_1hxmh002: #8c40efD9; --_1hxmh003: #8c40ef4D; --_1hxmh004: #f9f9fa33; --_1hxmh005: #f9f9fa40; --_1hxmh006: #b824f940; --_1hxmh007: #b824f9BF; --_1hxmh008: #8c40ef12;"
      >
        <div
          class="styles__1s3oplf1"
        >
          Hello
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`barStack > should render correctly with total 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1s3oplf2"
    >
      <div
        class="styles__1s3oplf0"
        style="--_1hxmh00a: 2%; --_1hxmh000: #f9f9fa1A; --_1hxmh001: #e9eaeb33; --_1hxmh002: #8c40efD9; --_1hxmh003: #8c40ef4D; --_1hxmh004: #f9f9fa33; --_1hxmh005: #f9f9fa40; --_1hxmh006: #b824f940; --_1hxmh007: #b824f9BF; --_1hxmh008: #8c40ef12;"
      >
        <div
          class="styles__1s3oplf1"
        >
          Hello
        </div>
      </div>
      <div
        class="styles__1s3oplf0"
        style="--_1hxmh00a: 4.2%; --_1hxmh000: #f9f9fa1A; --_1hxmh001: #e9eaeb33; --_1hxmh002: #8c40efD9; --_1hxmh003: #8c40ef4D; --_1hxmh004: #f9f9fa33; --_1hxmh005: #f9f9fa40; --_1hxmh006: #b824f940; --_1hxmh007: #b824f9BF; --_1hxmh008: #8c40ef12;"
      >
        <div
          class="styles__1s3oplf1"
        />
      </div>
      <div
        class="styles__1s3oplf0"
        style="--_1hxmh00a: 4.2%; --_1hxmh000: #f9f9fa1A; --_1hxmh001: #e9eaeb33; --_1hxmh002: #8c40efD9; --_1hxmh003: #8c40ef4D; --_1hxmh004: #f9f9fa33; --_1hxmh005: #f9f9fa40; --_1hxmh006: #b824f940; --_1hxmh007: #b824f9BF; --_1hxmh008: #8c40ef12;"
      >
        <div
          class="styles__1s3oplf1"
        >
          Encore
        </div>
      </div>
      <div
        class="styles__1s3oplf0"
        style="--_1hxmh00a: 4.2%; --_1hxmh000: #f9f9fa1A; --_1hxmh001: #e9eaeb33; --_1hxmh002: #8c40efD9; --_1hxmh003: #8c40ef4D; --_1hxmh004: #f9f9fa33; --_1hxmh005: #f9f9fa40; --_1hxmh006: #b824f940; --_1hxmh007: #b824f9BF; --_1hxmh008: #8c40ef12;"
      >
        <div
          class="styles__1s3oplf1"
        >
          Next
        </div>
      </div>
      <div
        class="styles__1s3oplf0"
        style="--_1hxmh00a: 4.2%; --_1hxmh000: #f9f9fa1A; --_1hxmh001: #e9eaeb33; --_1hxmh002: #8c40efD9; --_1hxmh003: #8c40ef4D; --_1hxmh004: #f9f9fa33; --_1hxmh005: #f9f9fa40; --_1hxmh006: #b824f940; --_1hxmh007: #b824f9BF; --_1hxmh008: #8c40ef12;"
      >
        <div
          class="styles__1s3oplf1"
        >
          Bye bye
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
